--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MYSQL_USER=root
 MYSQL_DB=product-price
 HOST_DB=localhost
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+MYSQL_PASSWORD=password
+MYSQL_ROOT_PASSWORD=password
